add support for Java 17